--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,4 +1,4 @@
-name: Build APK with Cordova
+name: Build and Sign APK with Cordova
 
 on:
   workflow_dispatch:
@@ -17,36 +17,55 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      # Paso 1: Checkout del repositorio
       - uses: actions/checkout@v4
 
+      # Paso 2: Configurar Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
 
+      # Paso 3: Instalar Cordova globalmente
       - name: Install Cordova
         run: |
           npm install -g cordova
 
+      # Paso 4: Crear un proyecto Cordova
       - name: Create Cordova project
         run: |
           cordova create MiAplicacion com.example.miaplicacion MiAplicacion
           cd MiAplicacion
           cordova platform add android
 
+      # Paso 5: Copiar el archivo index.html con todo anidado
       - name: Copy web files
         run: |
           echo "${{ github.event.inputs.html }}" > MiAplicacion/www/index.html
-          echo "${{ github.event.inputs.css }}" > MiAplicacion/www/styles.css
-          echo "${{ github.event.inputs.js }}" > MiAplicacion/www/script.js
+          cd MiAplicacion
 
+      # Paso 6: Construir la APK en modo release
       - name: Build APK
         run: |
           cd MiAplicacion
           cordova build android --release
 
-      - name: Upload APK
+      # Paso 7: Configurar el keystore para firmar la APK
+      - name: Set up keystore
+        run: |
+          echo "${{ secrets.KEYSTORE }}" > my-release-key.jks
+          echo "keystore file created"
+
+      # Paso 8: Firmar la APK
+      - name: Sign APK
+        run: |
+          cd MiAplicacion/platforms/android/app/build/outputs/apk/release
+          jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore my-release-key.jks -storepass ${{ secrets.KEYSTORE_PASSWORD }} -keypass ${{ secrets.KEY_PASSWORD }} app-release-unsigned.apk alias_name
+          zipalign -v 4 app-release-unsigned.apk app-release-signed.apk
+
+      # Paso 9: Subir la APK firmada como artefacto
+      - name: Upload signed APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-release
-          path: MiAplicacion/platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk
+          name: app-release-signed
+          path: MiAplicacion/platforms/android/app/build/outputs/apk/release/app-release-signed.apk
