--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -17,71 +17,108 @@ on:
         required: false
         default: 'com.example.miaplicacion'
         type: string
+      android_target:
+        description: 'Android target SDK version'
+        required: false
+        default: '34'
+        type: string
 
 env:
-  NODE_VERSION: '20'
-  JAVA_VERSION: '17'
+  NODE_VERSION: '20.11.1'
+  JAVA_VERSION: '17.0.10'
+  GRADLE_VERSION: '8.6'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Paso 1: Checkout del repositorio
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      # Paso 2: Configurar Node.js (sin caché de npm)
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: false  # Deshabilitar la caché de npm
+          check-latest: true
 
-      # Paso 3: Configurar Java
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: ${{ env.JAVA_VERSION }}
+          cache: 'gradle'
 
-      # Paso 4: Instalar Cordova y dependencias globales
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: ${{ env.GRADLE_VERSION }}
+
       - name: Install Cordova and dependencies
         run: |
-          npm install -g cordova native-run cordova-res @ionic/cli
+          npm install -g cordova@12.0.0 native-run@2.0.0 cordova-res@0.15.4 @ionic/cli@7.2.0
+          cordova --version
+          native-run --version
+          cordova-res --version
+          ionic --version
 
-      # Paso 5: Crear proyecto Cordova
       - name: Create Cordova project
         run: |
           cordova create "${{ github.event.inputs.app_name || 'MiAplicacion' }}" \
             "${{ github.event.inputs.package_name || 'com.example.miaplicacion' }}" \
             "${{ github.event.inputs.app_name || 'MiAplicacion' }}"
           cd "${{ github.event.inputs.app_name || 'MiAplicacion' }}"
-          cordova platform add android@latest
+          
+          # Agregar plataforma Android con versión específica
+          cordova platform add android@12.0.1
+          
+          # Verificar requisitos
           cordova requirements
 
-      # Paso 6: Copiar el archivo HTML embebido
+      - name: Configure project settings
+        working-directory: ${{ github.event.inputs.app_name || 'MiAplicacion' }}
+        run: |
+          # Actualizar config.xml con la versión SDK objetivo
+          sed -i "s/<platform name=\"android\">/<platform name=\"android\">\n        <preference name=\"android-targetSdkVersion\" value=\"${{ inputs.android_target }}\"\/>/g" config.xml
+          
+          # Agregar permisos necesarios
+          sed -i "/<platform name=\"android\">/a \        <preference name=\"AndroidXEnabled\" value=\"true\"\/>" config.xml
+
       - name: Copy embedded HTML file
         working-directory: ${{ github.event.inputs.app_name || 'MiAplicacion' }}/www
         run: |
+          # Hacer backup del index.html original
+          mv index.html index.html.bak
+          # Crear nuevo index.html con el contenido proporcionado
           echo "${{ github.event.inputs.html }}" > index.html
+          # Verificar que el archivo se creó correctamente
+          if [ ! -s index.html ]; then
+            echo "Error: index.html está vacío"
+            exit 1
+          fi
 
-      # Paso 7: Configurar Gradle
       - name: Configure Gradle
         working-directory: ${{ github.event.inputs.app_name || 'MiAplicacion' }}/platforms/android
         run: |
-          echo "org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError" >> gradle.properties
-          echo "org.gradle.parallel=true" >> gradle.properties
-          echo "org.gradle.daemon=true" >> gradle.properties
+          cat << EOF >> gradle.properties
+          org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError
+          org.gradle.parallel=true
+          org.gradle.daemon=true
+          org.gradle.caching=true
+          android.useAndroidX=true
+          android.enableJetifier=true
+          EOF
 
-      # Paso 8: Construir APK
       - name: Build APK
         working-directory: ${{ github.event.inputs.app_name || 'MiAplicacion' }}
         run: |
-          cordova build android --release --verbose
+          cordova clean
+          cordova build android --release --verbose -- --gradleArg=-PcdvBuildMultipleApks=false
         env:
           JAVA_OPTS: '-Xmx4g'
+          GRADLE_OPTS: '-Dorg.gradle.daemon=false'
 
-      # Paso 9: Configurar keystore
       - name: Setup keystore
         run: |
           if [ -z "${{ secrets.KEYSTORE }}" ]; then
@@ -94,8 +131,10 @@ jobs:
             echo "Error: Failed to create keystore file"
             exit 1
           fi
+          
+          # Verificar integridad del keystore
+          keytool -list -v -keystore my-release-key.jks -storepass "${{ secrets.KEYSTORE_PASSWORD }}" > /dev/null
 
-      # Paso 10: Firmar y alinear APK
       - name: Sign and align APK
         run: |
           APK_PATH=$(find ${{ github.event.inputs.app_name || 'MiAplicacion' }}/platforms/android/app/build/outputs/apk/release -name "*.apk" -type f | head -n 1)
@@ -105,8 +144,9 @@ jobs:
             exit 1
           fi
           
-          echo "Signing APK: $APK_PATH"
+          echo "Found APK at: $APK_PATH"
           
+          # Firmar APK
           jarsigner -verbose \
             -sigalg SHA256withRSA \
             -digestalg SHA-256 \
@@ -117,15 +157,17 @@ jobs:
             "${{ secrets.KEY_ALIAS || 'alias_name' }}"
           
           SIGNED_APK="app-release-signed.apk"
-          ${ANDROID_HOME}/build-tools/*/zipalign -v 4 "$APK_PATH" "$SIGNED_APK"
+          
+          # Alinear APK
+          ${ANDROID_HOME}/build-tools/34.0.0/zipalign -v 4 "$APK_PATH" "$SIGNED_APK"
           
           # Verificar firma
-          ${ANDROID_HOME}/build-tools/*/apksigner verify "$SIGNED_APK"
+          ${ANDROID_HOME}/build-tools/34.0.0/apksigner verify --verbose "$SIGNED_APK"
 
-      # Paso 11: Subir APK firmada
       - name: Upload signed APK
         uses: actions/upload-artifact@v4
         with:
           name: signed-apk
           path: app-release-signed.apk
           retention-days: 7
+          compression-level: 9
