--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -45,6 +45,12 @@ jobs:
           distribution: 'temurin'
           java-version: ${{ env.JAVA_VERSION }}
 
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
+        with:
+          android-sdk: "34"
+          accept-licenses: true
+
       - name: Install Cordova and dependencies
         run: |
           npm install -g cordova@12.0.0 
@@ -65,7 +71,7 @@ jobs:
         working-directory: ${{ github.event.inputs.app_name || 'MiAplicacion' }}
         run: |
           # Actualizar config.xml
-          sed -i "s/<platform name=\"android\">/<platform name=\"android\">\n        <preference name=\"android-targetSdkVersion\" value=\"${{ inputs.android_target }}\"\/>/g" config.xml
+          sed -i "s/<platform name=\"android\">/<platform name=\"android\">\n        <preference name=\"android-targetSdkVersion\" value=\"${{ github.event.inputs.android_target }}\"\/>/g" config.xml
           sed -i "/<platform name=\"android\">/a \        <preference name=\"AndroidXEnabled\" value=\"true\"\/>" config.xml
 
       - name: Copy embedded HTML file
@@ -130,8 +136,8 @@ jobs:
             "${{ secrets.KEY_ALIAS || 'alias_name' }}"
           
           SIGNED_APK="app-release-signed.apk"
-          ${ANDROID_HOME}/build-tools/34.0.0/zipalign -v 4 "$APK_PATH" "$SIGNED_APK"
-          ${ANDROID_HOME}/build-tools/34.0.0/apksigner verify --verbose "$SIGNED_APK"
+          ${ANDROID_HOME}/build-tools/$(ls ${ANDROID_HOME}/build-tools | sort -V | tail -1)/zipalign -v 4 "$APK_PATH" "$SIGNED_APK"
+          ${ANDROID_HOME}/build-tools/$(ls ${ANDROID_HOME}/build-tools | sort -V | tail -1)/apksigner verify --verbose "$SIGNED_APK"
 
       - name: Upload signed APK
         uses: actions/upload-artifact@v4
