--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -93,7 +93,7 @@ jobs:
         run: |
           mkdir -p platforms/android
           cat << EOF > platforms/android/gradle.properties
-          org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError
+          org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError
           org.gradle.parallel=true
           org.gradle.daemon=false
           android.useAndroidX=true
